# syslog-notify

./: .gitignore  AUTHORS  CHANGELOG  HACKING  Makefile.am  README  TODO  configure.ac  index.html  syslog-notify.c
attic/: README  cram_buffer.py  getcaps.c  pipebuf_size.c
src/: Makefile.am  syslog-notify.c  syslog-notify.man
